--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^3.10.0",
     "react-page-layout": "^0.9.8",
     "react-scripts": "3.4.1",
-    "react-table": "^7.2.1"
+    "react-table": "^7.2.1",
+    "react-vis": "^1.11.7"
   },
   "scripts": {
     "start": "react-scripts start",
